--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "vite": "^4.2.0"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.6",
     "glsl-noise": "^0.0.0",
+    "gsap": "^3.11.5",
     "three": "^0.151.2",
     "vite-plugin-glslify": "^2.0.1"
   }
